--- a/responsive.css
+++ b/responsive.css
@@ -13,6 +13,13 @@
 		margin-left: 0;
 	}
 	
+	header#header-area {
+    		position: sticky;
+   		 top: 0px;
+    		z-index: 999;
+    		background: #ffffff;
+	}
+	
 	
 }
 
@@ -58,6 +65,13 @@
 		display: block;
 	}
 	
+	header#header-area {
+    		position: sticky;
+   		 top: 0px;
+    		z-index: 999;
+    		background: #ffffff;
+	}
+	
 	
 }
 
@@ -82,6 +96,13 @@
 
 		font-weight: 100;
 
+	}
+	
+	header#header-area {
+    		position: sticky;
+   		 top: 0px;
+    		z-index: 999;
+    		background: #ffffff;
 	}
 }
 
