update responsive css

--- a/responsive.css
+++ b/responsive.css
@@ -14,10 +14,8 @@
 	}
 	
 	header#header-area {
-    		position: sticky;
-   		 top: 0px;
-    		z-index: 999;
-    		background: #ffffff;
+    		position: static;
+   		 
 	}
 	
 	
@@ -66,10 +64,8 @@
 	}
 	
 	header#header-area {
-    		position: sticky;
-   		 top: 0px;
-    		z-index: 999;
-    		background: #ffffff;
+    		position: static;
+   		
 	}
 	
 	
@@ -99,10 +95,8 @@
 	}
 	
 	header#header-area {
-    		position: sticky;
-   		 top: 0px;
-    		z-index: 999;
-    		background: #ffffff;
+    		position: static;
+   		
 	}
 }
 
